--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "./dist/index.js",
+        "src": "index.ts",
         "use": "@vercel/node",
         "config": {
           "includeFiles": ["./routes/**/*"]
         }
       }
     ],
-    "routes": [{ "src": "/[^.]+", "dest": "./dist/index.js" }]
+    "routes": [{ "src": "/[^.]+", "dest": "index.ts" }]
 }
