Update package.json to add "type" field and remove "module" field

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "leadllyhipposerver fullstack project",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "start": "ncc build index.ts && node dist/index.js"
   },
