--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "target": "es5",
+      "module": "commonjs",
       "outDir": "./dist",
       "sourceMap": true,
       "strict": true,
