Update Vercel configuration to use dist/index.ts as source and destination file

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,5 +9,5 @@
         }
       }
     ],
-    "routes": [{ "src": "/[^.]+", "dest": "index.ts" }]
+    "routes": [{ "src": "/[^.]+", "dest": "dist/index.ts" }]
 }
