--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "es5",
+  "compilerOptions": {
       "module": "commonjs",
-      "outDir": "./dist",
-      "sourceMap": true,
-      "strict": true,
       "esModuleInterop": true,
-    }
-}
+      "allowSyntheticDefaultImports": true,
+      "target": "es6",
+      "noImplicitAny": true,
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist",
+      "baseUrl": ".",
+      "paths": {
+          "*": ["node_modules/*", "types/*"]
+      }
+  },
+  "include": ["./**/*"]
+  }
