--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.ts",
-    "build": "rimraf dist && tsc",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "start": "ncc build index.ts && node dist/index.js"
+  },
   "keywords": [],
   "author": "Siddhant Patil",
   "license": "ISC",
@@ -31,12 +27,5 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@vercel/ncc": "^0.36.1",
-    "pre-commit": "^1.2.2",
-    "rimraf": "^5.0.5"
-  },
-  "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
-  ]
+  }
 }
