--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@vercel/ncc": "^0.36.1",
+    "@vercel/ncc": "^0.36.1"
   }
 }
