Update package.json to add "@types/node" and "typescript" dependencies

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@vercel/ncc": "^0.36.1"
+    "@vercel/ncc": "^0.36.1",
+    "@types/node": "^20.10.3",
+    "typescript": "^5.3.2"
   }
 }
